<resources>
    <string name="app_name">OneMemory</string>
    <string name="subscribe_title">请选择订阅方式</string>
    <string name="add_sub">添加订阅</string>
    <string name="detail">详细信息</string>
    <string name="chose_icon">选择 Icon</string>
    <string name="describe_sub">订阅描述</string>
    <string name="price">价格</string>
    <string name="sub_time">订阅时间</string>
    <string name="sub_method">订阅周期</string>
    <string name="pay_mehtod">支付方式</string>
    <string name="describe_hint">请输入订阅描述</string>
    <string name="price_hint">¥ 0.00</string>
    <string name="time_hint">请选择订阅时间</string>
    <string name="method_hint">请选择订阅周期</string>
    <string name="pay_hint">请选择支付方式</string>
    <string name="check_code">去 Github 🌟Star 支持我们！</string>
    <string name="settings">设置</string>
    <string name="contact_us">联系我们</string>
    <string name="export">备份数据</string>
    <string name="rate_us">好评鼓励</string>
    <string name="share_us">推荐我们</string>
    <string name="about_us">关于作者</string>
    <string name="privacy">隐私协议</string>
    <string name="check_update">检查更新</string>
    <string name="goto_subscribe">前往订阅页面>></string>
    <string name="overdue">🌟已结束订阅</string>
    <string name="diy">🛠 添加自定义订阅</string>
    <string name="diy_name">请输入订阅名称</string>
    <string name="christmas">Merry Christmas</string>
    <string name="newyear">Happy 2020</string>

    <string name="splash_slogn">管理订阅 我更在行</string>
    <string name="nothing">
        Nothing Here...\n
        点击右上角+按钮开始添加订阅
    </string>
    <string name="firstStep">
        第一步：
    </string>
    <string name="firstStepItem">1.点击“备份数据”按钮，此时内容将被导出到手机根目录，导出文件名为：“OneMemory.txt”</string>
    <string name="secondStep">
        第二步：
    </string>
    <string name="secondStepItem">2.将“OneMemory.txt”文件发送到新的设备上</string>
    <string name="thirdStep">
        第三步：
    </string>
    <string name="thirdStepItem">3.在新设备点击“导入数据”按钮，选择发送过来的“OneMemory.txt”文件，点击弹窗确定即可</string>
    <string name="hint"> 🌟提示：OneMemory 采用的同步方式为增量同步,
        新导入的数据不会覆盖本机上数据。</string>
    <string name="exportWarning">
        🌟警告：此功能在Android 10版本存在不兼容性</string>
    <string name="agreement">
        \u3000\u3000本应用尊重并保护所有使用服务用户的个人隐私权。
        为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。
        但本应用将以高度的勤勉、审慎义务对待这些信息。
        除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。
        本应用会不时更新本隐私权政策。
        您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。
        本隐私权政策属于本应用服务使用协议不可分割的一部分。
    </string>

    <string name="aboutus_detail">
        OneMemory 是一款管理订阅服务的工具类 App \n
        你可以利用这它查看并记录已订阅的各类服务 \n
        记录详情、订阅时间、金额以及订阅周期等 \n
        \n
        这一款是由「5+4=9」小组完成的第一个安卓项目 \n
        感谢项目各个成员的辛勤付出 \n
        感谢 Github 提供的帮助 \n
        \n
        由于是第一次开发手机 App \n
        我们的技术水平有限 \n
        很多设计的功能和酷炫的交互需求都没有实现 \n
        \n
        但是...\n
        希望你能喜欢\
        Time waits for no one.
    </string>

    <string name="aboutus_heart">
        Crafted with ♥️ by 549
    </string>

    <string name="privacy_cn">
        \u3000\u3000 OneMemory 是一个本地应用，
        我们不需要任何注册也不会收集你的个人信息。
        如果你有反馈意见，欢迎你在设置页面进行反馈. \n
        \u3000\u3000 这是一个开源的项目，这个项目只是一群学生拿来练手的产品。
        你可以去 Github 查看整个项目的源码，
        如果遇到问题可以提 Issue，
        也非常欢迎你提交 PullRequest。
    </string>
    <string name="privacy_en">
        \u3000\u3000OneMemory is a native application,
        We do not need any registration and will not collect your personal information.
        If you have feedback, you are welcome to provide feedback on the settings page. \n
        \u3000\u3000 This is an open source project. This project is just a product used by a group of students to practice their hands.
        You can go to Github to view the source code of the entire project.
        You can raise an Issue when you face a Bug.
        You are also very welcome to submit a PullRequest.
    </string>

    <string name="feedback">Hello,</string>

    <dimen name="width">330dp</dimen>
    <dimen name="height">80dp</dimen>
    <dimen name="titlesize">20sp</dimen>
</resources>
