<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".settings.Settings">

    <ImageView
            android:id="@+id/st_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_s_arrow">

    </ImageView>

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingLeft="20dp"
            android:text="@string/settings"
            android:textColor="@color/mainTextColor"
            android:textSize="30sp"
            android:visibility="visible"
            tools:visibility="visible" />

    <com.example.onememory.settings.userUI
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="feedback"
            app:icon_reference="@drawable/feedback"
            app:title_text="@string/contact_us" />

    <com.example.onememory.settings.userUI
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="encouragement"
            app:icon_reference="@drawable/star"
            app:title_text="@string/rate_us" />

    <com.example.onememory.settings.userUI
            android:id="@+id/recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Recommend"
            app:icon_reference="@drawable/share"
            app:title_text="@string/share_us" />

    <com.example.onememory.settings.userUI
            android:id="@+id/aboutAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="AboutAuthor"
            app:icon_reference="@drawable/about_us"

            app:title_text="关于作者" />

    <com.example.onememory.settings.userUI
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Agreement"
            app:icon_reference="@drawable/privacy"
            app:title_text="@string/privacy" />

    <com.example.onememory.settings.userUI
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="update"
            app:icon_reference="@drawable/refresh"
            app:title_text="@string/check_update" />

    <ImageView
            android:id="@+id/setting_img"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/christmas1">

    </ImageView>

</LinearLayout>
