<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/privacy_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/back_s_arrow">

    </ImageView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"

            android:layout_marginRight="30dp"
            android:text="@string/privacy_cn"
            android:textSize="15sp">

    </TextView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/privacy_en"
            android:textSize="15sp">

    </TextView>

    <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:text="@string/check_code"
            android:textColor="#006bff"
            android:textSize="15sp">

    </TextView>
</LinearLayout>