<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
    <!--android:fitsSystemWindows="true" 状态栏不和下方的页面挤在一起，空出一定的距离-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/sub_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back_s_arrow">

        </ImageView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/add_sub"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/titlesize">

        </TextView>

        <ImageView
                android:id="@+id/sub_add"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/check">

        </ImageView>
    </LinearLayout>


    <androidx.cardview.widget.CardView
            android:id="@+id/cv_AppCard"
            android:layout_width="340dp"
            android:layout_height="550dp"
            android:layout_gravity="center"
            android:alpha="0.8"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="10dp">

        <GridLayout
                android:layout_width="340dp"
                android:layout_height="550dp"
                android:columnCount="2"
                android:rowCount="5">

            <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/AppIconImg"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="38dp"
                    app:riv_border_color="#FFFFFF"
                    app:riv_border_width="0dip"
                    app:riv_corner_radius="20dip" />

            <TextView
                    android:id="@+id/AppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="微博"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp">

            </TextView>

            <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/divider">

            </View>

            <TextView
                    android:id="@+id/describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/describe_sub"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp">

            </TextView>


            <EditText
                    android:id="@+id/add_describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/describe_hint"
                    android:imeOptions="actionNext"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="15sp">

            </EditText>

            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/divider">

            </View>

            <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/price"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp">

            </TextView>

            <EditText
                    android:id="@+id/app_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/price_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="15sp">

            </EditText>

            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/divider">

            </View>

            <TextView
                    android:id="@+id/sub_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/sub_time"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp">

            </TextView>

            <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:hint="@string/time_hint"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="15sp">

            </TextView>


            <View
                    android:id="@+id/divider4"

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/divider">

            </View>

            <TextView
                    android:id="@+id/sub_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/sub_method"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp">

            </TextView>

            <TextView
                    android:id="@+id/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:hint="@string/method_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="15sp">

            </TextView>

            <View
                    android:id="@+id/divider5"

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/divider">

            </View>

            <TextView
                    android:id="@+id/sub_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/pay_mehtod"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp">

            </TextView>

            <TextView
                    android:id="@+id/method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:hint="@string/pay_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="15sp">

            </TextView>

            <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/divider">

            </View>

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pay_mehtod"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:visibility="invisible">

            </TextView>

            <TextView
                    android:id="@+id/pruchase_url"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/goto_subscribe"
                    android:textSize="15sp">

            </TextView>

        </GridLayout>

    </androidx.cardview.widget.CardView>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1">

    </TextView>

</LinearLayout>

